REFACTOR : 인기 상품 조회 배치 프로세스 전환 - 주문 도메인 및 조회 로직 변경