@@ -1,22 +1,23 @@
 package kr.hhplus.be.server.domain.order;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
+import java.time.LocalDate;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
+import kr.hhplus.be.server.support.MockTestSupport;
 
-@ExtendWith(MockitoExtension.class)
-class OrderServiceTest {
+class OrderServiceTest extends MockTestSupport{
+
+    @InjectMocks
+    private OrderService orderService;
 
     @Mock
     private OrderRepository orderRepository;
@@ -24,80 +25,86 @@ class OrderServiceTest {
     @Mock
     private OrderExternalClient orderExternalClient;
 
-    @InjectMocks
-    private OrderService orderService;
-
-    private List<OrderProduct> mockOrderProducts;
-
-    @BeforeEach
-    void setUp() {
-        mockOrderProducts = Arrays.asList(
-                OrderProduct.create(1L, "상품1", 10000L, 2),
-                OrderProduct.create(2L, "상품2", 5000L, 1)
-        );
-    }
-
+    @DisplayName("주문을 생성한다.")
     @Test
-    @DisplayName("주문을 생성할 수 있다.")
     void createOrder() {
         // given
-        OrderCommand.OrderProduct orderProduct1 = mock(OrderCommand.OrderProduct.class);
-        when(orderProduct1.getProductId()).thenReturn(1L);
-        when(orderProduct1.getProductName()).thenReturn("상품1");
-        when(orderProduct1.getProductPrice()).thenReturn(10000L);
-        when(orderProduct1.getQuantity()).thenReturn(2);
-
-        OrderCommand.OrderProduct orderProduct2 = mock(OrderCommand.OrderProduct.class);
-        when(orderProduct2.getProductId()).thenReturn(2L);
-        when(orderProduct2.getProductName()).thenReturn("상품2");
-        when(orderProduct2.getProductPrice()).thenReturn(5000L);
-        when(orderProduct2.getQuantity()).thenReturn(1);
-
-        OrderCommand.Create command = mock(OrderCommand.Create.class);
-        when(command.getUserId()).thenReturn(1L);
-        when(command.getUserCouponId()).thenReturn(null);
-        when(command.getDiscountRate()).thenReturn(0.0);
-        when(command.getProducts()).thenReturn(Arrays.asList(orderProduct1, orderProduct2));
+        OrderCommand.Create command = OrderCommand.Create.of(1L,
+            1L,
+            0.1,
+            List.of(
+                OrderCommand.OrderProduct.of(1L, "상품명", 2_000L, 2)
+            )
+        );
 
         // when
-        OrderInfo.Order result = orderService.createOrder(command);
+        OrderInfo.Order order = orderService.createOrder(command);
 
         // then
-        assertThat(result).isNotNull();
-        verify(orderRepository, times(1)).save(any(Order.class));
+        assertThat(order.getTotalPrice()).isEqualTo(3_600L);
+        assertThat(order.getDiscountPrice()).isEqualTo(400L);
+        verify(orderRepository, times(1)).save(any());
     }
 
+    @DisplayName("결제는 주문이 존재해야 한다.")
     @Test
-    @DisplayName("인기 상품 목록을 조회할 수 있다.")
-    void getTopPaidProducts() {
+    void payWithoutOrder() {
         // given
-        OrderCommand.TopOrders topOrders = mock(OrderCommand.TopOrders.class);
-        when(topOrders.getOrderIds()).thenReturn(Arrays.asList(1L, 2L, 3L));
-        when(orderRepository.findOrderIdsIn(anyList())).thenReturn(mockOrderProducts);
+        when(orderRepository.findById(any()))
+            .thenThrow(new IllegalArgumentException("주문이 존재하지 않습니다."));
 
         // when
-        OrderInfo.TopPaidProducts result = orderService.getTopPaidProducts(topOrders);
-
-        // then
-        assertThat(result).isNotNull();
-        verify(orderRepository, times(1)).findOrderIdsIn(topOrders.getOrderIds());
+        assertThatThrownBy(() -> orderService.paidOrder(1L))
+            .isInstanceOf(IllegalArgumentException.class)
+            .hasMessage("주문이 존재하지 않습니다.");
     }
 
+    @DisplayName("주문을 결제한다. 결제 완료 시, 외부 데이터 플랫폼으로 주문정보를 전송한다.")
     @Test
-    @DisplayName("주문을 결제 완료 상태로 변경할 수 있다.")
     void paidOrder() {
         // given
-        Long orderId = 1L;
-        Order mockOrder = mock(Order.class);
-        when(orderRepository.findById(orderId)).thenReturn(mockOrder);
-        doNothing().when(orderExternalClient).sendOrderMessage(any(Order.class));
+        Order order = Order.create(1L,
+            1L,
+            0.1,
+            List.of(
+                OrderProduct.create(1L, "상품명", 2_000L, 2)
+            )
+        );
+
+        when(orderRepository.findById(any()))
+            .thenReturn(order);
 
         // when
-        orderService.paidOrder(orderId);
+        orderService.paidOrder(1L);
 
         // then
-        verify(mockOrder, times(1)).paid();
-        verify(orderRepository, times(1)).findById(orderId);
-        verify(orderExternalClient, times(1)).sendOrderMessage(mockOrder);
+        assertThat(order.getOrderStatus()).isEqualTo(OrderStatus.PAID);
+        verify(orderExternalClient, times(1)).sendOrderMessage(order);
+    }
+
+    @DisplayName("결제 완료 된 상품을 요청한 날짜에 조회한다.")
+    @Test
+    void getPaidProducts() {
+        // given
+        OrderCommand.DateQuery command = OrderCommand.DateQuery.of(LocalDate.of(2025, 4, 23));
+
+        List<OrderInfo.PaidProduct> paidProducts = List.of(
+            OrderInfo.PaidProduct.of(1L, 2),
+            OrderInfo.PaidProduct.of(2L, 4)
+        );
+
+        when(orderRepository.findPaidProducts(any()))
+            .thenReturn(paidProducts);
+
+        // when
+        OrderInfo.PaidProducts result = orderService.getPaidProducts(command);
+
+        // then
+        assertThat(result.getProducts()).hasSize(2)
+            .extracting("productId", "quantity")
+            .containsExactlyInAnyOrder(
+                tuple(1L, 2),
+                tuple(2L, 4)
+            );
     }
 }
